--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,18 +1,12 @@
 .header {
-    background-color: rgba($color: #000000, $alpha: 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 25px 0;
+    text-align: center;
     position: fixed;
     width: 100%;
-    z-index: 1000;
 
-    .__boite-nom {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    a {
         color: var(--color-white);
-        height: 80px;
+        margin: 0;
     }
-}
-
-img {
-    object-fit: cover;
 }
