--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,8 +1,35 @@
-.hero .wrapper {
+.hero {
+    padding: 80px 0;
+    height: 80vh;
     position: relative;
+
+    .wrapper {
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+    }
+
+    @media (width <= $breakpoint-md) {
+        height: 60vh;
+    }
 }
 
-.hero .hero_contenu {
-    text-align: left;
+.hero__content {
+    color: var(--color-white);
+}
+
+.hero__media {
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: bottom;
+    }
 }
