--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -39,10 +39,17 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-md);
+    
     h3,
     p,
     a {
         margin: 0;
+    }
+
+    a {
+        display: flex;
+        color: var(--color-black);
+        background-color: var(--color-primary);
     }
 }
 
@@ -55,3 +62,5 @@
         display: block;
     }
 }
+
+
