--- a/src/styles/settings/fonts.scss
+++ b/src/styles/settings/fonts.scss
@@ -4,8 +4,7 @@
 /// Font family
 :root {
     --font-primary: 'Montserrat', sans-serif;
-    --font-secondary: 'Fira Code', monospace;
-
+    --font-secondary: "Work Sans", sans-serif;
     --font-size-content: #{typo(16px, 18px)};
 
     /// Grosseur des textes
@@ -13,4 +12,5 @@
     --font-size-h2: #{typo(30px, 50px)};
     --font-size-h3: #{typo(20px)};
     --font-size-h4: #{typo(20px, 30px)};
+    --font-size-a: #{typo(16px)};
 }
