--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -21,6 +21,7 @@
             height: 100%;
             object-fit: cover;
             display: block;
+            border-radius: 16px;
         }
     }
 
