--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -1,5 +1,9 @@
 .swiper-pagination {
     position: static;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 10px 0;
     margin-top: 30px;
     --swiper-pagination-bullet-width: 20px;
     --swiper-pagination-bullet-height: 20px;
