--- a/src/styles/components/labo-react.scss
+++ b/src/styles/components/labo-react.scss
@@ -13,6 +13,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 32px;
+        @media (width <= $breakpoint-sm) {
+            grid-template-columns: 1fr;
+        }
     }
 
     .card__content {
@@ -27,22 +30,17 @@
         text-decoration: none;
     }
 
-    button {
+    .btn {
+        background-color: var(--color-bg-primary);
         display: flex;
         align-items: center;
+        justify-content: center;
         padding: 8px 16px;
         gap: 8px;
         text-transform: uppercase;
         font-weight: bold;
         border-radius: 100px;
-        flex-grow: 0;
-        flex-basis: auto;
         width: fit-content;
-        border: none;
-        &:hover {
-            text-decoration: underline;
-            cursor: pointer;
-        }
     }
 
     .bold {
@@ -56,6 +54,7 @@
 
     h2 {
         margin-bottom: 100px;
+        font-size: #{typo(30px, 40px)};
     }
 
     .tag {
@@ -71,10 +70,16 @@
         font-size: 24px;
     }
 
-    img {
-        border-radius: 16px;
-        height: 100%;
+    .card__media {
         width: 100%;
+        height: 100%;
+    }
+    .card__media img {
+        width: 100%;
+        height: 100%;
         object-fit: cover;
+        display: block;
+        border-radius: 16px;
+        aspect-ratio: 3/2;
     }
 }
